fix: sponsors list grid gap and number of premium sponsors columns

--- a/website-styles/src/sass/template-parts/_sponsors.scss
+++ b/website-styles/src/sass/template-parts/_sponsors.scss
@@ -4,6 +4,7 @@
   display: grid;
   align-items: center;
   grid-template-columns: 1fr;
+  gap: 3rem;
 
   img {
 	max-width: 100%;
@@ -11,12 +12,8 @@
   }
 
   &.wordcamp-sponsors-premium {
-	@include media-min(sm) {
-	  grid-template-columns: repeat(2, 1fr);
-	}
-
 	@include media-min(md) {
-	  grid-template-columns: repeat(3, 1fr);
+	  grid-template-columns: repeat(2, 1fr);
 	}
   }
 
